[gd_scene load_steps=7 format=3 uid="uid://b5or4r1h5ti7x"]

[ext_resource type="Script" path="res://game/userInterface/hud.gd" id="1_jwj7s"]
[ext_resource type="PackedScene" uid="uid://dyaljei748n4i" path="res://game/userInterface/spells/set_slot.tscn" id="3_gq7hh"]

[sub_resource type="Animation" id="Animation_blsxx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible_characters")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WinnerLabel:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label3:visible_characters")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PanelContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../PanelContainer2:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../PanelContainer2/VBoxContainer/Label:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("%ComponentsChooseHBoxContainer:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bj5sb"]
resource_name = "choose_component"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PanelContainer2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PanelContainer2/VBoxContainer/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7, 1.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%ComponentsChooseHBoxContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.3, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y3i2i"]
resource_name = "winner_animation"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:visible_characters")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0, 0, 20]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("WinnerLabel:visible_characters")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 1.1, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 0, 0, 20]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label3:visible_characters")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 0, 0, 3]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PanelContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.435294), Color(1, 1, 1, 0.435294), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ubv3t"]
_data = {
"RESET": SubResource("Animation_blsxx"),
"choose_component": SubResource("Animation_bj5sb"),
"winner_animation": SubResource("Animation_y3i2i")
}

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_jwj7s")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="Control"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 75)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 75
text = "AND WINNER IS..."
visible_characters = 0
visible_ratio = 0.0

[node name="WinnerLabel" type="Label" parent="Control/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 75
text = "USERNAME"
autowrap_mode = 3
visible_characters = 0
visible_ratio = 0.0

[node name="Label3" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 75
text = "!!!"
horizontal_alignment = 3
visible_characters = 0
visible_ratio = 0.0

[node name="PanelContainer3" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -326.0
offset_top = -103.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer3/MarginContainer"]
layout_mode = 2

[node name="DeckSlotsHBoxContainer" type="HBoxContainer" parent="Control/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SetSlot" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/DeckSlotsHBoxContainer" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot2" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/DeckSlotsHBoxContainer" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot3" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/DeckSlotsHBoxContainer" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot4" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/DeckSlotsHBoxContainer" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot5" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/DeckSlotsHBoxContainer" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer3/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "j"
horizontal_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "k"
horizontal_alignment = 1
uppercase = true

[node name="Label3" type="Label" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "l"
horizontal_alignment = 1
uppercase = true

[node name="Label4" type="Label" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "n"
horizontal_alignment = 1
uppercase = true

[node name="Label5" type="Label" parent="Control/PanelContainer3/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "m"
horizontal_alignment = 1
uppercase = true

[node name="PanelContainer4" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -70.0
offset_right = 539.0
grow_vertical = 0

[node name="MarginContainer2" type="MarginContainer" parent="Control/PanelContainer4"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer4/MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="SetSlotsHBoxContainer" type="HBoxContainer" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SetSlot" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer/SetSlotsHBoxContainer" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot2" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer/SetSlotsHBoxContainer" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot3" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer/SetSlotsHBoxContainer" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot4" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer/SetSlotsHBoxContainer" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlotsHBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="SetSlot" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer/SetSlotsHBoxContainer2" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot2" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer/SetSlotsHBoxContainer2" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot3" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer/SetSlotsHBoxContainer2" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="SetSlot4" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer/SetSlotsHBoxContainer2" instance=ExtResource("3_gq7hh")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "switch - space"
horizontal_alignment = 1
uppercase = true

[node name="Label2" type="Label" parent="Control/PanelContainer4/MarginContainer2/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "attack - i"
horizontal_alignment = 1
uppercase = true

[node name="PanelContainer2" type="PanelContainer" parent="Control"]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 160)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -43.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer2"]
layout_mode = 2

[node name="ComponentsChooseHBoxContainer" type="HBoxContainer" parent="Control/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="SetSlot" parent="Control/PanelContainer2/VBoxContainer/ComponentsChooseHBoxContainer" instance=ExtResource("3_gq7hh")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2

[node name="Button" type="Button" parent="Control/PanelContainer2/VBoxContainer/ComponentsChooseHBoxContainer/SetSlot"]
layout_mode = 2
flat = true

[node name="SetSlot2" parent="Control/PanelContainer2/VBoxContainer/ComponentsChooseHBoxContainer" instance=ExtResource("3_gq7hh")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2

[node name="Button" type="Button" parent="Control/PanelContainer2/VBoxContainer/ComponentsChooseHBoxContainer/SetSlot2"]
layout_mode = 2
flat = true

[node name="SetSlot3" parent="Control/PanelContainer2/VBoxContainer/ComponentsChooseHBoxContainer" instance=ExtResource("3_gq7hh")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 2

[node name="Button" type="Button" parent="Control/PanelContainer2/VBoxContainer/ComponentsChooseHBoxContainer/SetSlot3"]
layout_mode = 2
flat = true

[node name="Label" type="Label" parent="Control/PanelContainer2/VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "Выбери способность, жмай куда поставить"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Control/HBoxContainer")
libraries = {
"": SubResource("AnimationLibrary_ubv3t")
}
